[project]
name = "voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyannote-audio>=4.0.4",
    "numpy>=1.26.0",
    "qwen-asr>=0.0.6",
    "soundfile>=0.12.1",
    "torch>=2.1.0",
    "voxcpm>=1.5.0",
    "numba>=0.63.1",
    "llvmlite>=0.46.0",
    "setuptools==69.5.1",
]
